bin_PROGRAMS=msff
msff_SOURCES=msff.cc #getopt.c getopt1.c getopt.h

CXXFLAGS=-Wall -DNDEBUG -O3
CFLAGS = -Wall -DNDEBUG -O3

#  uncomment the following if msff requires the math library
#msff_LDADD=-lm

#EXTRA_DIST=msff.lsm.in #NAME.texinfo msff.spec.in

#  if you write a self-test script named `chk', uncomment the
#  following and add `chk' to the EXTRA_DIST list
#TESTS=chk

#  build and install the .info pages
#info_TEXINFOS = msff.texinfo
#msff_TEXINFOS = gpl.texinfo

#  install the man pages
#man_MANS=msff.1
